adding pizza-add

--- a/adas-pizza-2/views/pizza/pizza-add.ejs
+++ b/adas-pizza-2/views/pizza/pizza-add.ejs
@@ -1,7 +1,10 @@
 <% include ../partials/boilerplate %>
  
 <form method='POST' action='/pizza'>
+  <input name='flavor' type='text' placeholder='Flavor' />
+  <input name='location' type='text' placeholder='Location' />
   <!-- check out the pizza database to see what fields you need here! -->
+  <input type='submit' value='submit' />
 </form>
 
 <% include ../partials/end %>
