--- a/adas-pizza-2/views/pizza/pizza-index.ejs
+++ b/adas-pizza-2/views/pizza/pizza-index.ejs
@@ -8,7 +8,7 @@
     <div class='singlepizza'>
       <h4><%= pizza.flavor %></h4>
       <p>This pizza comes from <%= pizza.location %>.</p>
-      <a href='/pizza/<%= index %>'>Learn more!</a>
+      <a href='/pizzas/<%= index + 1%>'>Learn more!</a>
     </div>
   <% }) %>
 </div>
