--- a/adas-pizza-2/views/pizza/pizza-single.ejs
+++ b/adas-pizza-2/views/pizza/pizza-single.ejs
@@ -3,6 +3,7 @@
 <div class='pizza'>
   <h3>More about <%= onePizza.flavor %></h3>
   <p>This pizza is from <%= onePizza.location %>.</p>
+  <p>Description: <%= onePizza.description %>.</p>
 </div>
  
 <% include ../partials/end %>
