--- a/adas-pizza-2/views/pizza/pizza-single.ejs
+++ b/adas-pizza-2/views/pizza/pizza-single.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/boilerplate %>
 
-<div class='pizza'>
+<div class='frame'>
   <h3>More about <%= onePizza.flavor %></h3>
   <p>This pizza is from <%= onePizza.location %>.</p>
   <p>Description: <%= onePizza.description %>.</p>
