--- a/adas-pizza-2/views/pizza/pizza-add.ejs
+++ b/adas-pizza-2/views/pizza/pizza-add.ejs
@@ -1,11 +1,13 @@
 <% include ../partials/boilerplate %>
- 
-<form method='POST' action='/pizzas'>
-  <input name='flavor' type='text' placeholder='Flavor' />
-  <textarea name='description'></textarea>
-  <input name='flavor_key' type='text' placeholder='Flavor Key' />
-  <input name='location' type='text' placeholder='Location' />
-  <input type='submit' value='submit' />
-</form>
+
+<div class='frame'>
+  <form method='POST' action='/pizzas'>
+    <input name='flavor' type='text' class='form' placeholder='Flavor' />
+    <input name='flavor_key' type='text' class='form' placeholder='Flavor Key' />
+    <input name='location' type='text' class='form' placeholder='Location' />
+    <textarea name='description' class='form' placeholder='Give a description here...'></textarea>
+    <input type='submit' value='submit' />
+  </form>
+</div>
 
 <% include ../partials/end %>
