--- a/adas-pizza-2/views/pizza/pizza-single.ejs
+++ b/adas-pizza-2/views/pizza/pizza-single.ejs
@@ -1,9 +1,10 @@
 <% include ../partials/boilerplate %>
 
 <div class='frame'>
-  <h3>More about <%= onePizza.flavor %></h3>
+  <h4>More about <%= onePizza.flavor %></h4>
   <p>This pizza is from <%= onePizza.location %>.</p>
   <p>Description: <%= onePizza.description %>.</p>
+  <a href='/pizzas'>Return to pizza list</a>
 </div>
  
 <% include ../partials/end %>
