--- a/adas-pizza-2/public/styles/style.css
+++ b/adas-pizza-2/public/styles/style.css
@@ -43,6 +43,10 @@ a {
   color: #EA3324;
   text-align: center;
 }
+img {
+  width: 50%;
+  text-align: center;
+}
 .frame{
   background: #fff;
   border: 1px solid #EA3324;
@@ -89,7 +93,7 @@ input[type='submit'] {
   body {
     font-size: 12px;
   }
-  h1 {
+  h1, h4 {
     font-size: 16px;
   }
 }
