--- a/adas-pizza-2/views/pizza/pizza-add.ejs
+++ b/adas-pizza-2/views/pizza/pizza-add.ejs
@@ -6,7 +6,7 @@
     <input name='flavor_key' type='text' class='form' placeholder='Flavor Key' />
     <input name='location' type='text' class='form' placeholder='Location' />
     <textarea name='description' class='form' placeholder='Give a description here...'></textarea>
-    <input type='submit' value='submit' />
+    <input type='submit' value='Add It' />
   </form>
 </div>
 
