--- a/adas-pizza-2/views/pizza/pizza-single.ejs
+++ b/adas-pizza-2/views/pizza/pizza-single.ejs
@@ -2,7 +2,7 @@
 
 <div class='frame'>
   <h4>More about <%= onePizza.flavor %></h4>
-  <img src='../../static/images/pepperoni.jpg'>
+  <img src='../../static/images/<%= onePizza.flavor_key%>.png'>
   <p>This pizza is from <%= onePizza.location %>.</p>
   <p>Description: <%= onePizza.description %>.</p>
   <a href='/pizzas'>Return to pizza list</a>
