added ada-chef image to index

--- a/adas-pizza-2/views/index.ejs
+++ b/adas-pizza-2/views/index.ejs
@@ -2,6 +2,7 @@
  
 <div class="frame">
     <h1><%= message %></h1> 
+    <img src='../static/images/ada-chef.jpg'>
     <h2><%= subTitle %></h2>
     <a href='/pizzas'>See all pizza</a>
     <a href='/pizzas/add'>Add your favorite pizza to the list!</a>
